# algae

./: .air.toml  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  algae.go  algae.nix  compose.yml  flake.nix  go.mod  go.sum  gomod2nix.toml
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  main.rs  mtr.rs  ping.rs
mtr/: cmds.go  ipv6.go  ipv6_test.go  mtr.go
templates/: bgp-page.templ  home.templ  ping-page.templ  ping.templ  shared.templ  style.css  traceroute-page.templ
util/: constants.go  cors.go  logger.go  render.go  system.go
web/: Dockerfile  bun.lockb  package.json
web/src/: app.css  app.html
web/src/lib/components/ui/: server-selector.svelte
web/src/routes/: +layout.svelte
