[package]
name = "algae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
birdc = "0.3.0"
mini-moka = "0.10.3"
ping = "0.5.2"
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-ping = "0.3.0"
tower = { version = "0.5.0", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
trippy = "0.10.0"
